
WIP      Make use of Krypton feature in the several dialogs of the addon.
         New param: "preselect" for Dialog().multiselect() and Dialog().select(). 
         See http://forum.kodi.tv/showthread.php?tid=250936

WIP      Update code to use xbmcgui.Dialog().select() - additions.
         Get rid of the ImgSelectDialog() class. This need Krypton Beta 4 to run!


[B]Advanced Emulator Launcher | version 0.9.6 | 20 May 2017[/B]

FEATURE  Set Parent/Clone property so skins can display flag.

FEATURE  Support ERSB and NPlayers in offline scraper.

FEATURE  Support ERSB and NPlayers in online scrapers.

FEATURE  Virtual category to browse the Offline Scraper database.

FEATURE  Updated the number of databases in the Offline Scraper.

FEATURE  ROM scanner reports.

FEATURE  Refurbish ROM auditing and Parent/Clone view display mode.

FEATURE  Added a "Display ROMs" setting valid only in Parent/Clone display mode.

         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2581878#pid2581878
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2582004#pid2582004

FEATURE  Support Redump DAT files. Note that Redump does not include Parent/Clone data so all
         ROMs are Parent ROMs.

FEATURE  New platform Panasonic 3DO.

FEATURE  Update NFO files after scraping. This is useful to interrupt the scanner when scanning
         large collections and resume scanning later.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2548998#pid2548998

FEATURE  Allow only one instance of AEL running at a time.
         This prevents multiple launcher execution and also get rids forever of any database
         corruption issues due to concurrency! Thanks Roman_V_M for ideas about the fix.
         See http://forum.kodi.tv/showthread.php?tid=310697

FIX      Fixed crash when displaying a Launcher in Parent/Clone view with Unknown ROMs.

FIX      Fixed the number of ROMs counter when importing AL launchers.xml
